Add wiring through all of the pre-existing classes (#16)